# news-hub-solution-artifacts

./: .pre-commit-config.yaml  pyproject.toml
configs/: full_config.yaml  test_config.yaml
documentation/: categorize_articles_via_llm.md  categorize_articles_via_llm_output.txt  extract_summarise_via_poe.md  extract_summarise_webpage.md  extract_summarise_webpage_output.txt  extract_summarise_youtube_transcript.md  extract_summarise_youtube_transcript_output.txt  extract_youtube_transcript.md  extract_youtube_transcript_output.txt  fetch_articles_via_llm.md  fetch_transcript_via_tactiq.md  fetch_youtube_videos_by_channel.md  fetch_youtube_videos_by_channel_handle.md  fetch_youtube_videos_by_channel_output.txt  generate_youtube_channel_digest.md  generate_youtube_channel_digest_output.txt  llm_extracted_articles.txt  what_the_world_is_saying.md  what_the_world_is_saying_output.json
modules/: content_extractor.py  region_categoriser.py  web_fetcher.py  youtube_fetcher.py
scripts/: categorize_articles_via_llm.py  extract_summarise_via_poe.py  extract_summarise_webpage.py  extract_summarise_youtube_transcript.py  extract_youtube_transcript.py  fetch_articles_via_llm.py  fetch_transcript_via_tactiq.py  fetch_youtube_videos_by_channel.py  fetch_youtube_videos_by_channel_handle.py  generate_youtube_channel_digest.py  what_the_world_is_saying.py
